--- a/unit_test/CMakeLists.txt
+++ b/unit_test/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.8)
 
 project(unit_test)
 
-add_executable(${PROJECT_NAME} unit_test.cpp)
+add_executable(${PROJECT_NAME} main.cpp)
 
 target_include_directories(${PROJECT_NAME} PRIVATE ../include) 
 
